deploy/k8s/workers-cron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumbnailer
  namespace: dev-thriller
  labels: { app: dt-workers, worker: thumbnailer }
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: { app: dt-workers, worker: thumbnailer }
  template:
    metadata:
      labels: { app: dt-workers, worker: thumbnailer }
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: thumbnailer
          image: devthriller/workers:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
